tests/should-fail/rawcodes/rawcodelit-8.j
globals
    integer l = 'a\\'
endglobals